--- a/angular8-springboot-client/src/app/account-list/account-list.component.html
+++ b/angular8-springboot-client/src/app/account-list/account-list.component.html
@@ -1,16 +1,13 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
-    <h2>Account List</h2>
+    <h3>Liste des Comptes</h3>
   </div>
   <div class="panel-body">
-    <button (click)="createAccount()" class="btn btn-success" style="margin-bottom: 15px;">Create New Account</button>
-    
-    <table class="table table-striped">
-      <thead>
+    <table class="table table-striped table-bordered table-hover">
+      <thead class="thead-dark">
         <tr>
-          <th>Id</th>
-          <th>Owner Name</th>
-          <th>Balance</th>
+          <th>ID</th>
+          <th>Owner Name</th> <th>Balance</th>
           <th>Actions</th>
         </tr>
       </thead>
@@ -18,11 +15,9 @@
         <tr *ngFor="let account of accounts | async">
           <td>{{account.id}}</td>
           <td>{{account.ownerName}}</td>
-          <td>{{account.balance}}</td>
-          <td>
-            <button (click)="deleteAccount(account.id)" class="btn btn-danger">Delete</button>
-            <button (click)="accountDetails(account.id)" class="btn btn-info" style="margin-left: 10px">Details</button>
-            <button (click)="updateAccount(account.id)" class="btn btn-warning" style="margin-left: 10px">Edit</button>
+          <td>{{account.balance }}</td> <td>
+            <button (click)="deleteAccount(account.id)" class="btn btn-danger btn-sm" style="margin-left: 10px;">Delete</button>
+            <button (click)="accountDetails(account.id)" class="btn btn-info btn-sm" style="margin-left: 10px;">Details</button>
           </td>
         </tr>
       </tbody>
