--- a/angular8-springboot-client/src/styles.scss
+++ b/angular8-springboot-client/src/styles.scss
@@ -1,12 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+/* Importation de Bootstrap */
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
-.footer {
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 70px;
-  background-color: blue;
-  color: white;
+/* Petit ajustement pour la marge */
+body {
+    padding-top: 20px;
+    background-color: #f4f4f4;
 }
